--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.4.15) unstable; urgency=medium
+
+  * version 0.4.15
+
+ -- Alfred E. Heggestad <aeh@db.org>  Sat, 06 Feb 2016 04:15:00 +0100
+
 libre (0.4.14) unstable; urgency=low
 
   * version 0.4.14
