--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.4.16) unstable; urgency=medium
+
+  * version 0.4.16
+
+ -- Alfred E. Heggestad <aeh@db.org>  Wed, 27 Apr 2016 20:00:00 +0100
+
 libre (0.4.15) unstable; urgency=medium
 
   * version 0.4.15
