remove support for Symbian OS

--- a/docs/README
+++ b/docs/README
@@ -130,7 +130,7 @@ Supported platforms:
 * FreeBSD
 * OpenBSD
 * NetBSD
-* Symbian OS
+* Symbian OS (not supported)
 * Solaris
 * Windows
 * Apple Mac OS X and iOS
