--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.5.0) unstable; urgency=medium
+
+  * version 0.5.0
+
+ -- Alfred E. Heggestad <alfred.heggestad@gmail.com>  Fri, 25 Nov 2016 18:00:00 +0100
+
 libre (0.4.17) unstable; urgency=medium
 
   * version 0.4.17
