--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.5.1) unstable; urgency=medium
+
+  * version 0.5.1
+
+ -- Alfred E. Heggestad <alfred.heggestad@gmail.com>  Sat, 04 Feb 2017 12:00:00 +0100
+
 libre (0.5.0) unstable; urgency=medium
 
   * version 0.5.0
