--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.5.3) unstable; urgency=medium
+
+  * version 0.5.3
+
+ -- Alfred E. Heggestad <alfred.heggestad@gmail.com>  Sat, 13 May 2017 12:00:00 +0200
+
 libre (0.5.2) unstable; urgency=medium
 
   * version 0.5.2
