--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.5.5) unstable; urgency=medium
+
+  * version 0.5.5
+
+ -- Alfred E. Heggestad <alfred.heggestad@gmail.com>  Tue, 5 Sept 2017 12:00:00 +0200
+
 libre (0.5.4) unstable; urgency=medium
 
   * version 0.5.4
