--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.5.6) unstable; urgency=medium
+
+  * version 0.5.6
+
+ -- Alfred E. Heggestad <alfred.heggestad@gmail.com>  Mon, 6 Nov 2017 15:00:00 +0100
+
 libre (0.5.5) unstable; urgency=medium
 
   * version 0.5.5
