--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.5.8) unstable; urgency=medium
+
+  * version 0.5.8
+
+ -- Alfred E. Heggestad <alfred.heggestad@gmail.com>  Fri, 20 Apr 2018 16:00:00 +0200
+
 libre (0.5.7) unstable; urgency=medium
 
   * version 0.5.7
