--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.5.9) unstable; urgency=medium
+
+  * version 0.5.9
+
+ -- Alfred E. Heggestad <alfred.heggestad@gmail.com>  Sat, 1 Sep 2018 10:00:00 +0200
+
 libre (0.5.8) unstable; urgency=medium
 
   * version 0.5.8
