--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.6.0) unstable; urgency=medium
+
+  * version 0.6.0
+
+ -- Alfred E. Heggestad <alfred.heggestad@gmail.com>  Sat, 24 Nov 2018 10:00:00 +0100
+
 libre (0.5.9) unstable; urgency=medium
 
   * version 0.5.9
