--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.6.0-2) unstable; urgency=medium
+
+  * version 0.6.0-2
+
+ -- Richard Aas <richaraas@gmail.com>  Tue, 11 Dec 2018 10:00:00 +0100
+
 libre (0.6.0-1) unstable; urgency=medium
 
   * version 0.6.0-1
