--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.6.0-3) unstable; urgency=medium
+
+  * version 0.6.0-3
+
+ -- Richard Aas <richaraas@gmail.com>  Fri, 1 Feb 2019 12:00:00 +0100
+
 libre (0.6.0-2) unstable; urgency=medium
 
   * version 0.6.0-2
