--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.6.0-4) unstable; urgency=medium
+
+  * version 0.6.0-4
+
+ -- Richard Aas <richaraas@gmail.com>  Fri, 26 Apr 2019 12:00:00 +0200
+
 libre (0.6.0-3) unstable; urgency=medium
 
   * version 0.6.0-3
