--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.6.0-6) unstable; urgency=medium
+
+  * version 0.6.0-6
+
+ -- Richard Aas <richaraas@gmail.com>  Thu, 04 Jul 2019 12:00:00 +0200
+
 libre (0.6.0-4) unstable; urgency=medium
 
   * version 0.6.0-4
