--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.6.1) unstable; urgency=medium
+
+  * version 0.6.1
+
+ -- Alfred E. Heggestad <alfred.heggestad@gmail.com>  Sat, 7 Sep 2019 08:00:00 +0200
+
 libre (0.6.0-6) unstable; urgency=medium
 
   * version 0.6.0-6
