--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.6.1-1) unstable; urgency=medium
+
+  * version 0.6.1-1
+
+ -- Richard Aas <richaraas@gmail.com>  Tue, 25 Feb 2020 09:00:00 +0100
+
 libre (0.6.1) unstable; urgency=medium
 
   * version 0.6.1
