--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.6.1-2) unstable; urgency=medium
+
+  * version 0.6.1-2
+
+ -- Richard Aas <richaraas@gmail.com>  Wed, 4 Mar 2020 14:00:00 +0100
+
 libre (0.6.1-1) unstable; urgency=medium
 
   * version 0.6.1-1
