--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (0.6.1-3) unstable; urgency=medium
+
+  * version 0.6.1-3
+
+ -- Richard Aas <richaraas@gmail.com>  Thu, 23 Apr 2020 13:00:00 +0200
+
 libre (0.6.1-2) unstable; urgency=medium
 
   * version 0.6.1-2
