--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (1.0.0) unstable; urgency=medium
+
+  * version 1.0.0
+
+ -- Sebastian Reimers <sebastian.reimers@gmail.com>  Thu, 08 Sep 2020 08:00:00 +0200
+
 libre (0.6.1-3) unstable; urgency=medium
 
   * version 0.6.1-3
