--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (1.1.0) unstable; urgency=medium
+
+  * version 1.1.0
+
+ -- Sebastian Reimers <sebastian.reimers@gmail.com>  Thu, 04 Oct 2020 09:00:00 +0200
+
 libre (1.0.0) unstable; urgency=medium
 
   * version 1.0.0
