--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (100.6.1-4) unstable; urgency=medium
+
+  * release
+
+ -- Richard Aas <richaraas@gmail.com>  Thu, 2 Sep 2021 07:00:00 +0200
+
 libre (0.6.1-3) unstable; urgency=medium
 
   * version 0.6.1-3
