--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (100.6.1-5) unstable; urgency=medium
+
+  * release
+
+ -- Richard Aas <richaraas@gmail.com>  Thu, 4 Nov 2021 15:00:00 +0100
+
 libre (100.6.1-4) unstable; urgency=medium
 
   * release
