--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (100.6.1-6) unstable; urgency=medium
+
+  * release
+
+ -- Richard Aas <richaraas@gmail.com>  Mon, 14 Aug 2023 09:00:00 +0200
+
 libre (100.6.1-5) unstable; urgency=medium
 
   * release
