--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libre (100.6.1-7) unstable; urgency=medium
+
+  * release
+
+ -- Richard Aas <richaraas@gmail.com>  Tue, 6 Feb 2024 09:00:00 +0100
+
 libre (100.6.1-6) unstable; urgency=medium
 
   * release
